# syntaqlite

./: .gitattributes  .gitignore  .gn  AGENTS.md  BUILD.gn  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  syntaqlite-runtime.debug.wasm  syntaqlite.toml  third_party
benches/: Cargo.toml
benches/benches/: main.rs
benches/src/: main.rs
integrations/mcp/: README.md  pyproject.toml
python/: .gitignore  README.md  pyproject.toml  setup.py
python/csrc/: _py_ast_wrap.h  _syntaqlite.c
python/dev/: __init__.py  build_wheel.py  cibw_before_all.sh  cibw_before_all_pyodide.sh  cibw_before_all_windows.ps1
python/dev/checks/: c_deps.py
python/dev/comparison/: collect.py  comparison.md.tmpl  render.py
python/dev/diff_tests/: __init__.py  amalg_executor.py  idempotency_runner.py  perfetto_common.py  runner.py  test_executor.py  test_loader.py  testing.py  utils.py
python/dev/integration_tests/: runner.py  suite.py
python/scripts/: build_wheel.py
python/syntaqlite/: __init__.py  _nodes.py  enums.py  nodes.py
python/syntaqlite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/syntaqlite/ast_codegen/: codegen.py
python/syntaqlite/checks/: c_deps.py
python/syntaqlite/comparison/: collect.py  comparison-details.md.tmpl  comparison.md.tmpl  render.py  run.py
python/syntaqlite/diff_tests/: amalg_executor.py  idempotency_runner.py  perfetto_common.py  runner.py  test_executor.py  test_loader.py  testing.py
python/syntaqlite/integration_tests/: runner.py  suite.py
python/syntaqlite/mcp/: __init__.py  __main__.py  server.py
python/syntaqlite/sqlite_extractor/: __init__.py
python/tools/: build_perfetto_wasm.py  build_web_playground.py  cargo_slots.py  check_public_api.py  format_c.py  install_build_deps.py  pre_push.py  run_bootstrap_test.py  run_codegen.py  run_rust_binary.py  sqlite_data.py  vendor_sqlite_tools.py
syntaqlite-buildtools/: Cargo.toml  README.md  build.rs
syntaqlite-buildtools/parser-actions/: _common.y  column_refs.y  create_table.y  cte.y  dml.y  expressions.y  functions.y  identifiers.y  select.y  table_source.y  trigger.y  virtual_table.y
syntaqlite-buildtools/parser-nodes/: aggregate.synq  cast.synq  common.synq  compound.synq  conditionals.synq  create_table.synq  cte.synq  dml.synq  functions.synq  select.synq  table_source.synq  utility_stmts.synq  values.synq  window.synq
syntaqlite-buildtools/sqlite-vendored/data/: cflags.json  functions.json  keyword_cflags.json  keyword_cflags.txt  version_cflags.json
syntaqlite-buildtools/sqlite-vendored/sources/: mkkeywordhash_modified.c
syntaqlite-buildtools/src/: codegen_api.rs  commands.rs  grammar_verify.rs  lib.rs  main.rs  no_sqlite_compile.rs  output_resolver.rs
syntaqlite-buildtools/src/dialect_codegen/: c_dialect.rs  c_meta_codegen.rs  c_nodes_codegen.rs  fmt_compiler.rs  mod.rs  python_c_codegen.rs  python_codegen.rs  rust_ast.rs  rust_dialect.rs  semantic_roles_codegen.rs
syntaqlite-buildtools/src/extract/: amalgamation_probe.rs  base_files.rs  functions.rs  keywords.rs  keywords_and_parser.rs  mkkeywordhash.rs  mod.rs  tokenizer.rs  virtual_tables.rs
syntaqlite-buildtools/src/parser_tools/: amalgamate.rs  base_files.rs  base_files_tables.rs  grammar_codegen.rs  keyword_hash.rs  lemon.rs  mkkeyword.rs  mod.rs  parser_pipeline.rs  sqlite_fragments.rs  tokenizer_assembly.rs
syntaqlite-buildtools/src/pipeline/: base_files.rs  fmt_compiler.rs  mod.rs  (+10 more)
syntaqlite-cli/: Cargo.toml
syntaqlite-cli/src/: codegen.rs  codegen_dialect.rs  codegen_sqlite.rs  codegen_sqlite_parser.rs  config.rs  extract.rs  fs_util.rs  lib.rs  lsp.rs  main.rs  mcp.rs  runtime.rs  sqlite_extract.rs  version_analysis.rs
syntaqlite-codegen/: Cargo.toml  REFACTOR_TRACKER.md  build.rs
syntaqlite-codegen/parser-actions/: _common.y  aggregate.y  cast.y  column_ref_select.y  column_refs.y  compound.y  conditionals.y  create_table.y  cte.y  dml.y  expressions.y  exprlists.y  functions.y  identifiers.y  literals.y  misc_expr.y  orderby.y  raise_expr.y  schema_ops.y  select.y  table_source.y  trigger.y  utility_stmts.y  values.y  virtual_table.y  window.y  ztokens.y
syntaqlite-codegen/parser-nodes/: aggregate.synq  cast.synq  common.synq  compound.synq  conditionals.synq  create_table.synq  cte.synq  dml.synq  expressions.synq  raise_expr.synq  schema_ops.synq  select.synq  table_source.synq  trigger.synq  utility_stmts.synq  values.synq  window.synq
syntaqlite-codegen/sqlite/: README.md
syntaqlite-codegen/src/: amalgamate.rs  ast_codegen.rs  base_files.rs  c_writer.rs  fmt_compiler.rs  grammar_parser.rs  lemon.rs  lib.rs  main.rs  mkkeyword.rs  mkkeywordhash_parser.rs  node_parser.rs  parser_pipeline.rs  run.rs  rust_writer.rs  sqlite_runtime_codegen.rs  synq_parser.rs
syntaqlite-codegen/tests/: grammar_parse_test.rs
syntaqlite-parser-sqlite/: Cargo.toml  build.rs
syntaqlite-parser-sqlite/src/: ast.rs  dialect.rs  ffi.rs  functions_catalog.rs  lib.rs  tokens.rs  wrappers.rs
syntaqlite-syntax/: Cargo.toml  README.md  build.rs
syntaqlite-syntax/csrc/: dialect_dispatch.h  hashmap.h  parser.c  token_wrapped.c  token_wrapped.h  tokenizer.c  tokens.h
syntaqlite-syntax/parser-actions/: _common.y  cast.y  column_ref_select.y  compound.y  conditionals.y  create_table.y  dml.y  expressions.y  literals.y  raise_expr.y  schema_ops.y  select.y  table_source.y  trigger.y  utility_stmts.y
syntaqlite-syntax/parser-nodes/: SYNTAX.md  common.synq  compound.synq  conditionals.synq  create_table.synq  cte.synq  dml.synq  expressions.synq  functions.synq  misc_expr.synq  select.synq  table_source.synq  window.synq
syntaqlite-syntax/src/: ast.rs  ast_traits.rs  cflags.rs  dialect_traits.rs  embedded_sources.rs  grammar.rs  incremental.rs  lib.rs  node.rs  parser.rs  session.rs  tokenizer.rs  util.rs  version.rs
syntaqlite-syntax/tests/: public_api_docs.rs
syntaqlite-sys/: Cargo.toml
syntaqlite-sys/csrc/: tokenizer.c
syntaqlite-sys/src/: dialect.rs  nodes.rs  parser.rs
syntaqlite-wasm/: Cargo.toml
syntaqlite-wasm/src/: main.rs
tests/benches/: Cargo.toml
(+963 files in other folders)
