# Cargo.toml
[workspace]
members = [
    "syntaqlite-common",
    "syntaqlite-syntax",
    "syntaqlite",
    "syntaqlite-wasm",
    "syntaqlite-buildtools",
    "syntaqlite-cli",
    "benches",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/LalitMaganti/syntaqlite"

[workspace.lints.rust]
unused_must_use = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
redundant_pub_crate = "allow"

[profile.dev]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
