# Cargo.toml
[workspace]
members = [
    "syntaqlite-common",
    "syntaqlite-syntax",
    "syntaqlite",
    "syntaqlite-buildtools",
    "syntaqlite-wasm",
    # temporarily excluded until semantic refactor is complete:
    "syntaqlite-cli",
    # "benches",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/LalitMaganti/syntaqlite"

[workspace.lints.rust]
unused_must_use = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
allow_attributes = "deny"
redundant_pub_crate = "allow"
must_use_candidate = "allow"

[profile.dev]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
