[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "main"
harness = false

[dependencies]
syntaqlite = { path = "../syntaqlite", features = ["lsp"] }
syntaqlite-syntax = { path = "../syntaqlite-syntax", default-features = false }

[dev-dependencies]
criterion = "0.5"
