[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[[bench]]
name = "main"
harness = false

[dependencies]
syntaqlite = { path = "../syntaqlite", features = ["lsp"] }
syntaqlite-syntax = { path = "../syntaqlite-syntax", default-features = false }

[dev-dependencies]
criterion = "0.5"
