[project]
name = "syntaqlite"
version = "0.2.7"
description = "SQLite SQL tools — parser, formatter, validator, and MCP server"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = []

[project.scripts]
syntaqlite = "syntaqlite:main"

[project.urls]
Homepage = "https://github.com/LalitMaganti/syntaqlite"
Documentation = "https://docs.syntaqlite.com"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["syntaqlite*"]
