[project]
name = "syntaqlite"
version = "0.2.11"
description = "SQLite SQL tools — parser, formatter, validator, and MCP server"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = []

[project.scripts]
syntaqlite = "syntaqlite:main"

[project.urls]
Homepage = "https://github.com/LalitMaganti/syntaqlite"
Documentation = "https://docs.syntaqlite.com"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["syntaqlite*"]

# ---------------------------------------------------------------------------
# cibuildwheel
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *-musllinux_* *s390x* *ppc64le* *i686*"
test-command = """python -c "from syntaqlite import format_sql; assert 'SELECT' in format_sql('select 1')" """

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "bash {project}/dev/cibw_before_all.sh {project}"

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
before-all = "bash {project}/dev/cibw_before_all.sh {project}"

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]
before-all = "powershell -File {project}/dev/cibw_before_all_windows.ps1 -ProjectDir {project}"

[[tool.cibuildwheel.overrides]]
select = "*-win_arm64"
environment = { SYNTAQLITE_STATIC_LIB = "{project}/../target/aarch64-pc-windows-msvc/release/syntaqlite.lib" }
test-skip = "*"

[tool.cibuildwheel.pyodide]
before-all = "bash {project}/dev/cibw_before_all_pyodide.sh {project}"
environment = { SYNTAQLITE_STATIC_LIB = "{project}/../target/wasm32-unknown-emscripten/release/libsyntaqlite.a", SYNTAQLITE_NO_CLI_BINARY = "1" }
test-skip = "*"
