[package]
name = "syntaqlite-buildtools"
version = "0.1.0"
edition = "2024"

[dependencies]
syntaqlite = { path = "../syntaqlite", default-features = false, features = ["fmt"] }
tempfile = "3.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
similar = { version = "2", optional = true }

[features]
default = ["codegen-pipeline", "grammar-verify", "version-analysis", "sqlite-extract", "sqlite-codegen"]
# Stage 2/3: parser generation, tokenizer/keyword assembly, dialect codegen.
# Requires vendored SQLite sources and pre-extracted fragments to be present.
codegen-pipeline = []
sqlite-extract = []
sqlite-codegen = ["sqlite-extract", "codegen-pipeline"]
version-analysis = ["dep:sha2", "dep:similar"]
grammar-verify = ["codegen-pipeline"]

[build-dependencies]
cc = "1.0"
