[package]
name = "syntaqlite-buildtools"
version = "0.0.7"
edition = "2024"
publish = false

[lints]
workspace = true

[[bin]]
name = "syntaqlite-buildtools"
path = "src/main.rs"
doc = false

[dependencies]
syntaqlite-common = { path = "../syntaqlite-common" }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"

[build-dependencies]
cc = "1.0"
