[package]
name = "syntaqlite-buildtools"
version = "0.0.34"
edition = "2024"
description = "Internal codegen and build tools for syntaqlite — not intended for direct use"
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "syntaqlite-buildtools"
path = "src/main.rs"

[package.metadata.dist]
dist = false
doc = false

[dependencies]
syntaqlite-common = { version = "0.0.34", path = "../syntaqlite-common" }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"

[build-dependencies]
cc = "1.0"
