[package]
name = "syntaqlite-cli"
version = "0.0.24"
edition = "2024"
repository.workspace = true
description = "Fast, accurate SQLite SQL formatter, validator, and language server — built on SQLite's own grammar"
homepage.workspace = true
license = "Apache-2.0"
readme = "../README.md"

[lints]
workspace = true

[[bin]]
name = "syntaqlite"
path = "src/main.rs"
doc = false

[features]
default = ["builtin-sqlite", "mcp"]
builtin-sqlite = ["dep:syntaqlite", "dep:glob", "syntaqlite/lsp", "syntaqlite/dynload", "syntaqlite/experimental-embedded", "dep:syntaqlite-buildtools"]
mcp = ["builtin-sqlite", "dep:rmcp", "dep:tokio", "dep:schemars"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = { version = "0.3", optional = true }
rmcp = { version = "0.1", features = ["server", "transport-io"], optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntaqlite = { version = "0.0.24", path = "../syntaqlite", optional = true, features = ["fmt", "lsp", "validation", "experimental-embedded", "serde-json"] }
syntaqlite-syntax = { version = "0.0.24", path = "../syntaqlite-syntax" }
syntaqlite-buildtools = { version = "0.0.24", path = "../syntaqlite-buildtools", optional = true }
tempfile = "3.8"
tokio = { version = "1", features = ["rt", "macros", "io-std"], optional = true }
