[package]
name = "syntaqlite-codegen"
version = "0.1.0"
edition = "2024"
autobins = false
exclude = ["src/main.rs", "parser-actions", "parser-nodes"]

[[bin]]
name = "syntaqlite-codegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syntaqlite-codegen-utils = { path = "../syntaqlite-codegen-utils" }
syntaqlite-fmt-bytecode = { path = "../syntaqlite-fmt-bytecode" }
tempfile = "3.8"

[build-dependencies]
cc = "1.0"
syntaqlite-codegen-utils = { path = "../syntaqlite-codegen-utils" }
