[package]
name = "syntaqlite-codegen"
version = "0.1.0"
edition = "2024"
autobins = false
exclude = ["src/main.rs"]

[[bin]]
name = "syntaqlite-codegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syntaqlite-codegen-utils = { path = "../syntaqlite-codegen-utils" }
syntaqlite-runtime = { path = "../syntaqlite-runtime", default-features = false, features = ["fmt"] }
tempfile = "3.8"

[build-dependencies]
cc = "1.0"
syntaqlite-codegen-utils = { path = "../syntaqlite-codegen-utils" }
