[package]
name = "syntaqlite-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
syntaqlite-runtime = { path = "../syntaqlite-runtime", default-features = false, features = ["fmt"] }
tempfile = "3.8"
sha2 = { version = "0.10", optional = true }
similar = { version = "2", optional = true }

[features]
version-analysis = ["dep:sha2", "dep:similar"]

[build-dependencies]
cc = "1.0"
