[package]
name = "syntaqlite-parser-sqlite"
version = "0.1.0"
edition = "2024"
links = "syntaqlite_dialect"

[features]
default = []
pin-version = []
pin-cflags = []

# Skip bundled C compilation entirely — link against a pre-built library instead.
no-bundled-parser = []

[dependencies]
syntaqlite-parser = { path = "../syntaqlite-parser", default-features = false }

[build-dependencies]
cc = "1.0"
