[package]
name = "syntaqlite-syntax"
version = "0.1.0"
edition = "2024"
links = "syntaqlite_syntax"

[features]
default = ["sqlite"]
sqlite = []
serde = ["dep:serde"]
serde-json = ["serde", "dep:serde_json"]
dynload = ["dep:libloading"]
pin-version = ["sqlite"]
pin-cflags = ["sqlite"]
no-bundled-parser = []


[lints]
workspace = true

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
libloading = { version = "0.8", optional = true }

[build-dependencies]
cc = "1.0"
