[package]
name = "syntaqlite-syntax"
version = "0.2.4"
edition = "2024"
links = "syntaqlite_syntax"
description = "Internal parser and tokenizer for syntaqlite — not intended for direct use"
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[features]
default = ["sqlite"]
sqlite = []
serde = ["dep:serde"]
serde-json = ["serde", "dep:serde_json"]
dynload = ["dep:libloading"]
pin-version = ["sqlite"]
pin-cflags = ["sqlite"]
no-bundled-parser = []


[lints]
workspace = true

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
libloading = { version = "0.8", optional = true }

[build-dependencies]
cc = "1.0"
