[package]
name = "syntaqlite-sys"
version = "0.1.0"
edition = "2024"
links = "syntaqlite_parser"

[features]
default = ["sqlite"]
sqlite = []

# Pin version/cflags at compile time for dead-code elimination.
# Values come from env vars, using the same names as the C defines:
#
#   SYNTAQLITE_SQLITE_VERSION=3035000 cargo build --features pin-version
#
#   SYNTAQLITE_CFLAG_SQLITE_OMIT_WINDOWFUNC=1 \
#   SYNTAQLITE_CFLAG_SQLITE_ENABLE_FTS5=1 \
#   cargo build --features pin-cflags
#
pin-version = ["sqlite"]   # Pin SQLite version via SYNTAQLITE_SQLITE_VERSION env var
pin-cflags = ["sqlite"]    # Pin compile-time flags via SYNTAQLITE_CFLAG_* env vars

# Skip bundled C compilation entirely — link against a pre-built library instead.
no-bundled-parser = []

[build-dependencies]
cc = "1.0"
