[package]
name = "syntaqlite-wasm"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[package.metadata.dist]
dist = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntaqlite = { path = "../syntaqlite", features = ["fmt", "lsp", "serde-json", "embedded"] }
