[project]
name = "syntaqlite-mcp"
version = "0.0.1"
description = "MCP server for syntaqlite SQL tools"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.scripts]
syntaqlite-mcp = "syntaqlite_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syntaqlite_mcp"]
