[package]
name = "benches"
version = "0.2.11"
edition = "2024"
publish = false

[lints.rust]
unused_must_use = "deny"
missing_docs = "allow"
unreachable_pub = "allow"
unused_qualifications = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "allow"
undocumented_unsafe_blocks = "deny"
allow_attributes = "deny"
redundant_pub_crate = "allow"
must_use_candidate = "allow"

[[bench]]
name = "main"
harness = false

[dependencies]
syntaqlite = { path = "../../syntaqlite", features = ["lsp"] }

[dev-dependencies]
criterion = "0.5"
